Corrected t-test value

--- a/Frequentist Inference Case Study - Part B.ipynb
+++ b/Frequentist Inference Case Study - Part B.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
        "[1338 rows x 8 columns]>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
        "-1.6459941145571324"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,16 +375,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "interval value:  649.3115666837367\n",
-      "lower 95:  12621.11069845752\n",
-      "upper 95:  13919.733831824993\n"
+      "interval value:  546.0571279450386\n",
+      "lower 95:  12724.365137196219\n",
+      "upper 95:  13816.479393086294\n"
      ]
     }
    ],
@@ -445,14 +445,15 @@
    "source": [
     "__A:__ \n",
     "- Manually:\n",
-    "    - sp:  11512.285\n",
-    "    - t-test:  0.0151\n",
-    "- scipy.stats:"
+    "    - t-test:  11.901309799255758\n",
+    "- scipy.stats:\n",
+    "    - t-test:  11.8932990308767\n",
+    "    - pvalue:  4.461230231620717e-31"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +646,7 @@
        "[783 rows x 8 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +878,7 @@
        "[555 rows x 8 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +958,7 @@
        "(11.893299030876712, 4.461230231620717e-31)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
