--- a/Decision_Tree_Specialty_Coffee/Springboard Decision Tree Specialty Coffee Case Study - Tier 3.ipynb
+++ b/Decision_Tree_Specialty_Coffee/Springboard Decision Tree Specialty Coffee Case Study - Tier 3.ipynb
@@ -2057,6 +2057,15 @@
   {
    "cell_type": "code",
    "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Prediction = Prediction.drop('Decision', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2075,7 +2084,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Age', 'Gender', 'num_coffeeBags_per_year', 'spent_last_week',\n",
+       "       'spent_last_month', 'Salary', 'Distance', 'Online'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Prediction.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2093,7 +2124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2106,7 +2137,7 @@
        "(array(['NO', 'YES'], dtype=object), array([ 51, 177]))"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2129,7 +2160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2151,7 +2182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2173,7 +2204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2241,7 +2272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2272,7 +2303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2291,7 +2322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2316,7 +2347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2330,7 +2361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -2339,7 +2370,7 @@
        "(array(['NO', 'YES'], dtype=object), array([ 46, 182]))"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
