Add demographic info to columns and one school per row

--- a/education_project/Capstone2_education_project.ipynb
+++ b/education_project/Capstone2_education_project.ipynb
@@ -494,6 +494,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Series([], Name: Mean Scale Score, dtype: object)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_school[df_school['Grade'] == ]['Mean Scale Score']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -1891,7 +1911,7 @@
    "metadata": {},
    "source": [
     "## Next: \n",
-    "1. Transform demographic information contained into subgroup id (rows) to one variable per column."
+    "1. Transform demographic information contained in subgroup id (rows) to one variable per column."
    ]
   },
   {
@@ -5394,9 +5414,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Merge df_school_id with df_entities\n",
+    "## Merge df_language to df_entities\n",
     "\n",
-    "This merge adds school name, zipcode, and test year to the main df."
+    "This merge adds school name, zipcode, and test year to the language arts and literature df."
    ]
   },
   {
