--- a/GridSearchKNN_Case_Study/GridSearchKNN_Case_Study.ipynb
+++ b/GridSearchKNN_Case_Study/GridSearchKNN_Case_Study.ipynb
@@ -698,7 +698,7 @@
    "source": [
     "plt.figure(figsize=(12,10))\n",
     "print('Correlation between various features')\n",
-    "p=sns.heatmap(diabetes_data.corr(), annot=True,cmap ='Blues')"
+    "p=sns.heatmap(diabetes_data.corr(), annot=True, cmap ='Blues')"
    ]
   },
   {
@@ -902,7 +902,7 @@
    "outputs": [],
    "source": [
     "# Identify number of neighbors that resulted in the max score in the training dataset\n",
-    "\n"
+    "K_train = 1"
    ]
   },
   {
@@ -921,7 +921,7 @@
    "outputs": [],
    "source": [
     "# Identify number of neighbors that resulted in the max score in the testing dataset\n",
-    "\n"
+    "K_test = 8"
    ]
   },
   {
@@ -976,21 +976,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KNeighborsClassifier(n_neighbors=8)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Fit and score the best number of neighbors based on the plot.\n",
+    "knn = KNeighborsClassifier(n_neighbors=8)\n",
+    "knn.fit(X_train, y_train)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
     "\n",
     "y_pred = knn.predict(X_test)\n",
-    "pl = confusion_matrix(y_test,y_pred)"
+    "pl = confusion_matrix(y_test, y_pred)"
    ]
   },
   {
@@ -1006,8 +1021,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7fa82d0d4a90>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# from sklearn.metrics import confusion_matrix\n",
+    "# confusion_matrix(y_test, y_pred)\n",
+    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
+    "\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "cmd = ConfusionMatrixDisplay(cm)\n",
+    "cmd.plot(cmap='Blues')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1023,7 +1057,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "report = classification_report(y_test, y_pred, output_dict=True)\n",
+    "\n",
+    "# Turn to dataframe for visualization\n",
+    "df_report = pd.DataFrame(report).T\n",
+    "df_report"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1045,28 +1086,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "GridSearchCV(cv=5, estimator=KNeighborsClassifier(),\n",
-       "             param_grid={'n_neighbors': array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17,\n",
-       "       18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34,\n",
-       "       35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49])})"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
-    "param_grid = {'n_neighbors':np.arange(1,50)}\n",
+    "param_grid = {'n_neighbors': np.arange(1,50)}\n",
     "knn = KNeighborsClassifier()\n",
-    "knn_cv= GridSearchCV(knn,param_grid,cv=5)\n",
+    "knn_cv = GridSearchCV(knn, param_grid, cv=5)\n",
     "knn_cv.fit(X,y)"
    ]
   },
@@ -1081,18 +1108,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best Score:0.7526440879382056\n",
-      "Best Parameters: {'n_neighbors': 31}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Best Score:\" + str(knn_cv.best_score_))\n",
     "print(\"Best Parameters: \" + str(knn_cv.best_params_))"
