Case study complete

--- a/Bayesian Optimization Case Study/Bayesian_optimization_case_study.ipynb
+++ b/Bayesian Optimization Case Study/Bayesian_optimization_case_study.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -34,12 +34,17 @@
    },
    "outputs": [],
    "source": [
-    "#! pip install bayesian-optimization"
+    "#!pip install bayesian-optimization\n",
+    "\n",
+    "# lightgbm also requires libomp: brew install libomp\n",
+    "#!pip install lightgbm\n",
+    "\n",
+    "#!pip install catboost"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T16:39:09.312682Z",
@@ -64,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -78,16 +83,15 @@
     {
      "data": {
       "text/plain": [
-       "['.config',\n",
-       " 'flight_delays_test.csv.zip',\n",
+       "['flight_delays_test.csv.zip',\n",
+       " '.DS_Store',\n",
+       " 'Bayesian_optimization_case_study.ipynb',\n",
        " 'flight_delays_train.csv.zip',\n",
-       " 'sample_data']"
+       " '.ipynb_checkpoints']"
       ]
      },
-     "execution_count": 45,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 3,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -168,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -192,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -232,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -249,11 +253,11 @@
      "text": [
       "|   iter    |  target   |     a     |     b     |\n",
       "-------------------------------------------------\n",
-      "| \u001b[0m 1       \u001b[0m | \u001b[0m 7.847   \u001b[0m | \u001b[0m 1.67    \u001b[0m | \u001b[0m 6.177   \u001b[0m |\n",
-      "| \u001b[0m 2       \u001b[0m | \u001b[0m 7.075   \u001b[0m | \u001b[0m 1.418   \u001b[0m | \u001b[0m 5.657   \u001b[0m |\n",
-      "| \u001b[0m 3       \u001b[0m | \u001b[0m 7.476   \u001b[0m | \u001b[0m 2.129   \u001b[0m | \u001b[0m 5.348   \u001b[0m |\n",
-      "| \u001b[95m 4       \u001b[0m | \u001b[95m 10.0    \u001b[0m | \u001b[95m 3.0     \u001b[0m | \u001b[95m 7.0     \u001b[0m |\n",
-      "| \u001b[0m 5       \u001b[0m | \u001b[0m 9.387   \u001b[0m | \u001b[0m 3.0     \u001b[0m | \u001b[0m 6.387   \u001b[0m |\n",
+      "| \u001b[0m 1       \u001b[0m | \u001b[0m 7.901   \u001b[0m | \u001b[0m 2.923   \u001b[0m | \u001b[0m 4.978   \u001b[0m |\n",
+      "| \u001b[95m 2       \u001b[0m | \u001b[95m 9.199   \u001b[0m | \u001b[95m 2.912   \u001b[0m | \u001b[95m 6.288   \u001b[0m |\n",
+      "| \u001b[0m 3       \u001b[0m | \u001b[0m 5.906   \u001b[0m | \u001b[0m 1.449   \u001b[0m | \u001b[0m 4.457   \u001b[0m |\n",
+      "| \u001b[95m 4       \u001b[0m | \u001b[95m 9.626   \u001b[0m | \u001b[95m 2.626   \u001b[0m | \u001b[95m 7.0     \u001b[0m |\n",
+      "| \u001b[0m 5       \u001b[0m | \u001b[0m 8.0     \u001b[0m | \u001b[0m 1.0     \u001b[0m | \u001b[0m 7.0     \u001b[0m |\n",
       "=================================================\n"
      ]
     }
@@ -274,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -289,19 +293,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'a': 3.0, 'b': 7.0}\n"
+      "{'a': 2.6261040534000193, 'b': 7.0}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "10.0"
+       "9.62610405340002"
       ]
      },
-     "execution_count": 49,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 7,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -341,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -365,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -474,20 +476,23 @@
        "</div>"
       ],
       "text/plain": [
-       "  Month DayofMonth DayOfWeek  DepTime  ... Origin Dest Distance  dep_delayed_15min\n",
-       "0   c-8       c-21       c-7     1934  ...    ATL  DFW      732                  N\n",
-       "1   c-4       c-20       c-3     1548  ...    PIT  MCO      834                  N\n",
-       "2   c-9        c-2       c-5     1422  ...    RDU  CLE      416                  N\n",
-       "3  c-11       c-25       c-6     1015  ...    DEN  MEM      872                  N\n",
-       "4  c-10        c-7       c-6     1828  ...    MDW  OMA      423                  Y\n",
+       "  Month DayofMonth DayOfWeek  DepTime UniqueCarrier Origin Dest  Distance  \\\n",
+       "0   c-8       c-21       c-7     1934            AA    ATL  DFW       732   \n",
+       "1   c-4       c-20       c-3     1548            US    PIT  MCO       834   \n",
+       "2   c-9        c-2       c-5     1422            XE    RDU  CLE       416   \n",
+       "3  c-11       c-25       c-6     1015            OO    DEN  MEM       872   \n",
+       "4  c-10        c-7       c-6     1828            WN    MDW  OMA       423   \n",
        "\n",
-       "[5 rows x 9 columns]"
+       "  dep_delayed_15min  \n",
+       "0                 N  \n",
+       "1                 N  \n",
+       "2                 N  \n",
+       "3                 N  \n",
+       "4                 Y  "
       ]
      },
-     "execution_count": 51,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 9,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -507,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -600,10 +605,8 @@
        "max      2534.000000    4962.00000"
       ]
      },
-     "execution_count": 52,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 10,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -633,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T15:38:42.677690Z",
@@ -662,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -727,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -751,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 14,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -776,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 15,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -800,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T14:31:58.412296Z",
@@ -859,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T15:40:14.034265Z",
@@ -910,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T15:48:04.682447Z",
@@ -930,7 +933,21 @@
      "output_type": "stream",
      "text": [
       "|   iter    |  target   | lambda_l1 | lambda_l2 | max_depth | min_ch... | min_da... | num_le... |\n",
-      "-------------------------------------------------------------------------------------------------\n"
+      "-------------------------------------------------------------------------------------------------\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=1959, min_child_samples=6625 will be ignored. Current value: min_data_in_leaf=1959\n",
+      "| \u001b[0m 1       \u001b[0m | \u001b[0m 0.7437  \u001b[0m | \u001b[0m 0.02661 \u001b[0m | \u001b[0m 0.04921 \u001b[0m | \u001b[0m 38.54   \u001b[0m | \u001b[0m 6.626e+0\u001b[0m | \u001b[0m 1.96e+03\u001b[0m | \u001b[0m 258.3   \u001b[0m |\n",
+      "| \u001b[0m 2       \u001b[0m | \u001b[0m 0.7432  \u001b[0m | \u001b[0m 0.04181 \u001b[0m | \u001b[0m 0.02468 \u001b[0m | \u001b[0m 39.12   \u001b[0m | \u001b[0m 9.077e+0\u001b[0m | \u001b[0m 1.406e+0\u001b[0m | \u001b[0m 1.794e+0\u001b[0m |\n",
+      "| \u001b[0m 3       \u001b[0m | \u001b[0m 0.7259  \u001b[0m | \u001b[0m 0.03338 \u001b[0m | \u001b[0m 0.02411 \u001b[0m | \u001b[0m 46.03   \u001b[0m | \u001b[0m 1.13e+03\u001b[0m | \u001b[0m 692.2   \u001b[0m | \u001b[0m 336.5   \u001b[0m |\n",
+      "| \u001b[0m 4       \u001b[0m | \u001b[0m 0.7436  \u001b[0m | \u001b[0m 0.04268 \u001b[0m | \u001b[0m 0.01253 \u001b[0m | \u001b[0m 51.48   \u001b[0m | \u001b[0m 6.508e+0\u001b[0m | \u001b[0m 1.538e+0\u001b[0m | \u001b[0m 200.1   \u001b[0m |\n",
+      "| \u001b[0m 5       \u001b[0m | \u001b[0m 0.7431  \u001b[0m | \u001b[0m 0.0328  \u001b[0m | \u001b[0m 0.04464 \u001b[0m | \u001b[0m 17.33   \u001b[0m | \u001b[0m 132.3   \u001b[0m | \u001b[0m 1.989e+0\u001b[0m | \u001b[0m 2.731e+0\u001b[0m |\n",
+      "| \u001b[0m 6       \u001b[0m | \u001b[0m 0.7258  \u001b[0m | \u001b[0m 0.000334\u001b[0m | \u001b[0m 0.02074 \u001b[0m | \u001b[0m 40.53   \u001b[0m | \u001b[0m 1.819e+0\u001b[0m | \u001b[0m 664.6   \u001b[0m | \u001b[0m 3.979e+0\u001b[0m |\n",
+      "| \u001b[0m 7       \u001b[0m | \u001b[0m 0.7435  \u001b[0m | \u001b[0m 0.0443  \u001b[0m | \u001b[0m 0.01243 \u001b[0m | \u001b[0m 20.64   \u001b[0m | \u001b[0m 6.855e+0\u001b[0m | \u001b[0m 1.841e+0\u001b[0m | \u001b[0m 2.442e+0\u001b[0m |\n",
+      "| \u001b[0m 8       \u001b[0m | \u001b[0m 0.7201  \u001b[0m | \u001b[0m 0.03211 \u001b[0m | \u001b[0m 0.00202 \u001b[0m | \u001b[0m 11.67   \u001b[0m | \u001b[0m 8.607e+0\u001b[0m | \u001b[0m 238.2   \u001b[0m | \u001b[0m 3.964e+0\u001b[0m |\n",
+      "| \u001b[0m 9       \u001b[0m | \u001b[0m 0.743   \u001b[0m | \u001b[0m 0.009808\u001b[0m | \u001b[0m 0.01277 \u001b[0m | \u001b[0m 60.26   \u001b[0m | \u001b[0m 8.437e+0\u001b[0m | \u001b[0m 1.364e+0\u001b[0m | \u001b[0m 91.23   \u001b[0m |\n",
+      "| \u001b[95m 10      \u001b[0m | \u001b[95m 0.7437  \u001b[0m | \u001b[95m 0.04395 \u001b[0m | \u001b[95m 0.01384 \u001b[0m | \u001b[95m 11.93   \u001b[0m | \u001b[95m 5.134e+0\u001b[0m | \u001b[95m 1.933e+0\u001b[0m | \u001b[95m 1.698e+0\u001b[0m |\n",
+      "| \u001b[0m 11      \u001b[0m | \u001b[0m 0.7203  \u001b[0m | \u001b[0m 0.01784 \u001b[0m | \u001b[0m 0.04334 \u001b[0m | \u001b[0m 43.6    \u001b[0m | \u001b[0m 9.388e+0\u001b[0m | \u001b[0m 271.6   \u001b[0m | \u001b[0m 3.707e+0\u001b[0m |\n",
+      "| \u001b[0m 12      \u001b[0m | \u001b[0m 0.7434  \u001b[0m | \u001b[0m 0.004894\u001b[0m | \u001b[0m 0.005644\u001b[0m | \u001b[0m 24.46   \u001b[0m | \u001b[0m 9.899e+0\u001b[0m | \u001b[0m 1.937e+0\u001b[0m | \u001b[0m 162.8   \u001b[0m |\n",
+      "=================================================================================================\n"
      ]
     }
    ],
@@ -958,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T15:49:01.513767Z",
@@ -968,7 +985,24 @@
     "colab_type": "code",
     "id": "oc8z6mfy-KZS"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'target': 0.7437336703915892,\n",
+       " 'params': {'lambda_l1': 0.043951501304607676,\n",
+       "  'lambda_l2': 0.013844832894157472,\n",
+       "  'max_depth': 11.934628307264559,\n",
+       "  'min_child_samples': 5134.105847391936,\n",
+       "  'min_data_in_leaf': 1932.783304150832,\n",
+       "  'num_leaves': 1697.767239255509}}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lgbBO.max"
    ]
@@ -989,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T15:51:01.001688Z",
@@ -999,7 +1033,24 @@
     "colab_type": "code",
     "id": "X1ttZmrI-KZX"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'target': 0.7437175685861317,\n",
+       " 'params': {'lambda_l1': 0.02660517677615234,\n",
+       "  'lambda_l2': 0.04920696751519951,\n",
+       "  'max_depth': 38.53802875227509,\n",
+       "  'min_child_samples': 6625.859175961883,\n",
+       "  'min_data_in_leaf': 1959.9303397795866,\n",
+       "  'num_leaves': 258.32895874516225}}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lgbBO.res[0]"
    ]
@@ -1026,7 +1077,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "varInspector": {
    "cols": {
