--- a/GridSearchKNN_Case_Study/GridSearchKNN_Case_Study.ipynb
+++ b/GridSearchKNN_Case_Study/GridSearchKNN_Case_Study.ipynb
@@ -901,19 +901,18 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max train score 100.0 % and k = [1]\n"
+     ]
     }
    ],
    "source": [
     "# Identify number of neighbors that resulted in the max score in the training dataset\n",
-    "train_scores.index(max(train_scores))\n"
+    "max_train_score = max(train_scores)\n",
+    "train_scores_ind = [i for i, v in enumerate(train_scores) if v == max_train_score]\n",
+    "print('Max train score {} % and k = {}'.format(max_train_score*100,list(map(lambda x: x+1, train_scores_ind))))"
    ]
   },
   {
@@ -931,19 +930,18 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max train score 73.59307359307358 % and k = [8]\n"
+     ]
     }
    ],
    "source": [
     "# Identify number of neighbors that resulted in the max score in the testing dataset\n",
-    "test_scores.index(max(test_scores))"
+    "max_test_score = max(test_scores)\n",
+    "test_scores_ind = [i for i, v in enumerate(test_scores) if v == max_test_score]\n",
+    "print('Max train score {} % and k = {}'.format(max_test_score*100,list(map(lambda x: x+1, test_scores_ind))))"
    ]
   },
   {
@@ -1004,7 +1002,7 @@
     {
      "data": {
       "text/plain": [
-       "KNeighborsClassifier(n_neighbors=8)"
+       "0.7359307359307359"
       ]
      },
      "execution_count": 21,
@@ -1015,7 +1013,8 @@
    "source": [
     "# Fit and score the best number of neighbors based on the plot.\n",
     "knn = KNeighborsClassifier(n_neighbors=8)\n",
-    "knn.fit(X_train, y_train)"
+    "knn.fit(X_train, y_train)\n",
+    "knn.score(X_test,y_test)"
    ]
   },
   {
@@ -1047,7 +1046,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7fbe2557ced0>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7f7f18d72a50>"
       ]
      },
      "execution_count": 23,
