Add answer to questions

--- a/Clustering_Case_Study/Clustering Case Study - Customer Segmentation with K-Means - Tier 1.ipynb
+++ b/Clustering_Case_Study/Clustering Case Study - Customer Segmentation with K-Means - Tier 1.ipynb
@@ -500,17 +500,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This is an exercise in adapting someone else's code for our own use; a very common practice for data scientists and programmers alike\n",
-    "# OUR SOURCE: http://scikit-learn.org/stable/auto_examples/cluster/plot_kmeans_silhouette_analysis.html\n",
-    "\n",
-    "import sklearn.metrics\n",
-    "import matplotlib.cm as cm\n",
-    "\n",
     "# Make an empty list called avg_silhouette_scores\n",
-    "_ _ _ = []\n",
+    "avg_silhouette_scores = []\n",
     "\n",
     "# Iterate through Krange with variable K as before\n",
-    "for _ _ _ in _ _ _:\n",
+    "for K in k_range:\n",
     "    fig, ax1 = plt.subplots(1, 1)\n",
     "    fig.set_size_inches(9, 5)\n",
     "\n",
@@ -518,40 +512,42 @@
     "    # The silhouette coefficient can range from -1, 1 but in this example all\n",
     "    # lie within [-0.1, 1]\n",
     "    # Call set_xlim on ax1 \n",
-    "    _ _ _.set_xlim([-0.25, 1])\n",
+    "    ax1.set_xlim([-0.25, 1])\n",
     "    # The (n_clusters+1)*10 is for inserting blank space between silhouette\n",
     "    # plots of individual clusters, to demarcate them clearly.\n",
-    "    ax1.set_ylim([0, len(X) + (K + 1) * 10])\n",
+    "    ax1.set_ylim([0, len(x_cols) + (K + 1) * 10])\n",
     "\n",
     "    # Initialize the clusterer with n_clusters value and a random generator\n",
     "    # seed of 10 for reproducibility.\n",
-    "    _ _ _ = sklearn.cluster.KMeans(n_clusters=K, random_state=10)\n",
-    "    cluster_labels = clusterer.fit_predict(X)\n",
+    "    clusterer = sklearn.cluster.KMeans(n_clusters=K, random_state=10)\n",
+    "    cluster_labels = clusterer.fit_predict(x_cols)\n",
     "\n",
     "    # The silhouette_score gives the average value for all the samples.\n",
-    "    # This gives a perspective into the density and separation of the formed\n",
-    "    # clusters\n",
+    "    # This gives a perspective into the density and separation of the formed clusters\n",
     "    # Make a variable called silhouette_avg. Set the parameters to silhouette_score to X, and cluster_labels\n",
-    "    _ _ _  = sklearn.metrics.silhouette_score(_ _ _, _ _ _)\n",
+    "    silhouette_avg  = sklearn.metrics.silhouette_score(x_cols, cluster_labels)\n",
     "    avg_silhouette_scores.append(silhouette_avg)\n",
     "\n",
     "    # Compute the silhouette scores for each sample\n",
     "    # Call sklearn.metrics.silhouette_samples with the below parameters\n",
-    "    sample_silhouette_values = _ _ _._ _ _._ _ _(X, cluster_labels)\n",
-    "\n",
+    "    sample_silhouette_values = sklearn.metrics.silhouette_samples(x_cols, cluster_labels)\n",
+    "    \n",
+    "    print(\"For k =\", K, \n",
+    "      \"The average silhouette_score is :\", silhouette_avg)\n",
+    "    \n",
     "    y_lower = 10\n",
     "    for i in range(K):\n",
     "        # Aggregate the silhouette scores for samples belonging to\n",
     "        # cluster i, and sort them\n",
     "        # Make a variable called ith_cluster_silhouette_values\n",
-    "        _ _ _ = \\\n",
+    "        ith_cluster_silhouette_values = \\\n",
     "            sample_silhouette_values[cluster_labels == i]\n",
     "\n",
     "        # Call sort() on this variable \n",
-    "        ith_cluster_silhouette_values._ _ _\n",
-    "    \n",
+    "        ith_cluster_silhouette_values.sort()\n",
+    "        \n",
     "        # Call shape[0] on ith_cluster_silhouette_values \n",
-    "        size_cluster_i = ith_cluster_silhouette_values._ _ _ \n",
+    "        size_cluster_i = ith_cluster_silhouette_values.shape[0] \n",
     "        y_upper = y_lower + size_cluster_i\n",
     "\n",
     "        cmap = cm.get_cmap(\"Spectral\")\n",
@@ -562,19 +558,19 @@
     "\n",
     "        # Label the silhouette plots with their cluster numbers at the middle\n",
     "        # This requires calling text() on ax1 \n",
-    "        _ _ _.text(-0.05, y_lower + 0.5 * size_cluster_i, str(i))\n",
+    "        ax1.text(-0.05, y_lower + 0.5 * size_cluster_i, str(i))\n",
     "\n",
     "        # Compute the new y_lower for next plot\n",
     "        y_lower = y_upper + 10  # 10 for the 0 samples\n",
     "\n",
     "    # Setting title, xlabel and ylabel \n",
-    "    ax1._ _ _(\"The silhouette plot for the various clusters.\")\n",
-    "    ax1._ _ _(\"The silhouette coefficient values\")\n",
-    "    _ _ _._ _ _(\"Cluster label\")\n",
+    "#    ax1.subtitle(\"The silhouette plot for the various clusters.\")\n",
+    "    ax1.set_xlabel(\"The silhouette coefficient values\")\n",
+    "    ax1.set_ylabel(\"Cluster label\")\n",
     "\n",
     "    # The vertical line for average silhouette score of all the values\n",
     "    # This requires axvline() \n",
-    "    ax1._ _ _(x=silhouette_avg, color=\"red\", linestyle=\"--\")\n",
+    "    ax1.axvline(x=silhouette_avg, color=\"red\", linestyle=\"--\")\n",
     "\n",
     "    ax1.set_yticks([])  # Clear the yaxis labels / ticks\n",
     "    ax1.set_xticks([-0.1, 0, 0.2, 0.4, 0.6, 0.8, 1])\n",
