Small changes in format

--- a/Springboard Regression Case Study - the Red Wine Dataset - Tier 3.ipynb
+++ b/Springboard Regression Case Study - the Red Wine Dataset - Tier 3.ipynb
@@ -87,14 +87,15 @@
     "import numpy as np \n",
     "import pandas as pd \n",
     "import matplotlib.pyplot as plt \n",
-    "import seaborn as sns # For all our visualization needs.\n",
-    "import statsmodels.api as sm # What does this do? Find out and type here.\n",
-    "from statsmodels.graphics.api import abline_plot # What does this do? Find out and type here.\n",
-    "from sklearn.metrics import mean_squared_error, r2_score # What does this do? Find out and type here.\n",
-    "from sklearn.model_selection import train_test_split #  What does this do? Find out and type here.\n",
-    "from sklearn import linear_model, preprocessing # What does this do? Find out and type here.\n",
-    "import warnings # For handling error messages.\n",
-    "# Don't worry about the following two instructions: they just suppress warnings that could occur later. \n",
+    "import seaborn as sns \n",
+    "import statsmodels.api as sm \n",
+    "from statsmodels.graphics.api import abline_plot \n",
+    "from sklearn.metrics import mean_squared_error, r2_score \n",
+    "from sklearn.model_selection import train_test_split \n",
+    "from sklearn import linear_model, preprocessing \n",
+    "import warnings # For handling error messages\n",
+    "\n",
+    "# suppress warnings  \n",
     "warnings.simplefilter(action=\"ignore\", category=FutureWarning)\n",
     "warnings.filterwarnings(action=\"ignore\", module=\"scipy\", message=\"^internal gelsd\")"
    ]
@@ -1763,6 +1764,7 @@
     "# We can use almost identical code to create the third model, because it is the same algorithm, just different inputs\n",
     "# Create the model\n",
     "rModel3 = sm.OLS(y_train, X_train)\n",
+    "\n",
     "# Fit the model\n",
     "rModel3_results = rModel3.fit()"
    ]
