--- a/Clustering_Case_Study/Clustering Case Study - Customer Segmentation with K-Means.ipynb
+++ b/Clustering_Case_Study/Clustering Case Study - Customer Segmentation with K-Means.ipynb
@@ -7,7 +7,7 @@
     "id": "zxi-VF92ymXl"
    },
    "source": [
-    "# Clustering Case Study: Customer Segmentation with K-Means -  Tier 3\n",
+    "# Clustering Case Study: Customer Segmentation with K-Means\n",
     "***\n",
     "\n",
     "Structure of the mini-project:\n",
